<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/loginFragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.view.fragments.LoginFragment"
        android:label="@string/login_fragment_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_welcome"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpToInclusive="true"
            app:launchSingleTop="false"/>
    </fragment>

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.view.fragments.WelcomeFragment"
        android:label="@string/fragment_welcome_title"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcome_to_instructions"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.view.fragments.InstructionsFragment"
        android:label="@string/fragment_instructions_title"
        tools:layout="@layout/fragment_instructions">

        <action
            android:id="@+id/action_instructions_to_shoeList"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/loginFragment"
           />
    </fragment>

    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.view.fragments.ShoeListFragment"
        android:label="@string/shoe_list_fragment_title"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeList_to_shoeDetail"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.view.fragments.ShoeDetailFragment"
        android:label="@string/shoe_detail_fragment_title"
        tools:layout="@layout/fragment_show_detail">
        <action
            android:id="@+id/action_shoeDetail_to_shoeList"
            app:popUpTo="@id/shoeListFragment"
           />
    </fragment>

</navigation>