<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="com.udacity.shoestore.models.ShoeStoreViewModel" />
        <variable
            name="navDirection"
            type="androidx.navigation.NavDirections" />
    </data>
    <!--constraint layout allows to control the layout values by adding constraints on
        different views , w.r.t. other view as well as parent. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.WelcomeFragment">

        <TextView
            android:id="@+id/text_label_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label1_welcome_fragment"
            android:textAlignment="center"
            android:textSize="@dimen/text_large"
            android:layout_marginStart="@dimen/padding16dp"
            android:layout_marginEnd="@dimen/padding16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_label_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding16dp"
            android:layout_marginTop="@dimen/padding16dp"
            android:layout_marginEnd="@dimen/padding16dp"
            android:text="@string/label2_welcome_fragment"
            android:textSize="@dimen/text_medium"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_label_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_navigate_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dimen4dp"
            android:layout_marginStart="@dimen/padding16dp"
            android:layout_marginEnd="@dimen/padding16dp"
            android:layout_marginBottom="@dimen/padding16dp"
            android:layout_marginTop="@dimen/dimen24dp"
            android:backgroundTint="@color/colorLightBlue"
            android:onClick="@{()->viewmodel.setNewDestination(navDirection.getActionId())}"
            android:text="@string/button_navigate_instruction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_label_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>